Updates for new Craft 2.5 plugin features

--- a/commercemailer/templates/_settings.html
+++ b/commercemailer/templates/_settings.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 	<div class="commerceMailerSettings">
-		<h2>{{ name }}&nbsp;</h2>
-		<p><small>(Version {{ version }})</small></p>
-		<p>
-			Commerce Mailer helps you set up forms for emailing product enquiries &amp; customer cart/order details.
-			<br>For <a href="http://buildwithcraft.com" title="Craft CMS">Craft</a>, with <a href="http://buildwithmarket.com/" title="Craft Commerce">Commerce</a>.
-		</p>
+        <p><small>Version: {{ version }}</small></p>
+        <p>
+            {{ description }}
+        </p>
+        <hr>
 		<div>
 
 			<p>Debugging? (Dump POST to page, prevent re-directs)</p>
